<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pewpo.spotifyapp.MainActivity"
    android:background="@color/colorGray">

    <TextView
        android:id="@+id/songInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/playing_msg"
        android:textAlignment="center"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/songProgressBar" />

    <ProgressBar
        android:id="@+id/songProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:progress="0"/>


    <Button
        android:id="@+id/searchTracksButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchTracksButton"
        android:onClick="onSearchTracksButtonClicked"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@+id/addSongTxtField"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="8dp" />

    <ImageView
        android:id="@+id/bandLogo"
        android:layout_width="285dp"
        android:layout_height="261dp"
        android:fadingEdge="vertical"
        android:layout_marginRight="8dp"
        android:background="@color/colorDarkBlue"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.506"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/songInfo" />

    <ProgressBar
        android:id="@+id/logoProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="@+id/bandLogo"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/bandLogo"
        app:layout_constraintBottom_toBottomOf="@+id/bandLogo"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/bandLogo"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <EditText
        android:id="@+id/addSongTxtField"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/searchTracks"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/previousSongBtn"
            android:layout_width="23dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:onClick="onSkipToPreviousButtonClicked"
            android:text="P"
            tools:layout_editor_absoluteX="295dp"
            tools:layout_editor_absoluteY="324dp" />

        <Button
            android:id="@+id/buttonPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onPlayButtonClicked"
            android:text="@string/play"
            tools:layout_editor_absoluteX="207dp"
            tools:layout_editor_absoluteY="411dp" />

        <Button
            android:id="@+id/pauseSongBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:onClick="onPauseButtonClicked"
            android:text="@string/pause"
            tools:layout_editor_absoluteX="104dp"
            tools:layout_editor_absoluteY="411dp" />

        <Button
            android:id="@+id/nextSongBtn"
            android:layout_width="23dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:onClick="onSkipToNextButtonClicked"
            android:text="N"
            tools:layout_editor_absoluteX="41dp"
            tools:layout_editor_absoluteY="299dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintRight_toLeftOf="@+id/searchTracksButton"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bandLogo"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/addSongTxtField"
       >

        <Button
            android:id="@+id/Track0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="0"
            android:visibility="invisible"
            android:onClick="onSelectSongButtonClicked"/>

        <Button
            android:id="@+id/Track1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="1"
            android:visibility="invisible"
            android:onClick="onSelectSongButtonClicked"/>

        <Button
            android:id="@+id/Track2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="2"
            android:visibility="invisible"
            android:onClick="onSelectSongButtonClicked"/>

        <Button
            android:id="@+id/Track3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="3"
            android:visibility="invisible"
            android:onClick="onSelectSongButtonClicked"/>

        <Button
            android:id="@+id/Track4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="4"
            android:onClick="onSelectSongButtonClicked"
            android:visibility="invisible"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
